<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="2"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    android:background="@drawable/fragment_current_month_screen_single_item_style">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/current_month_single_item_top_layout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_menu_edit"
                android:id="@+id/current_month_single_item_edit_category_imageview"
                android:background="@drawable/activity_input_data_buttons_style"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp" />

            <TextView
                android:text="@string/current_month_single_item_category_textview_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/current_month_single_item_category_textview"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="24sp"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:textStyle="normal|bold"
                android:textColor="@drawable/button_text_color_black" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:weightSum="2">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end">

                <TextView
                    android:text="@string/current_month_single_item_in_current_month_textview_string"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/current_month_single_item_in_current_month_textview"
                    android:textColor="@drawable/button_text_color_grey" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    app:srcCompat="@drawable/arrow_right"
                    android:id="@+id/current_month_single_item_arrow_right_imageview" />

                <TextView
                    android:text="@string/current_month_single_item_value_textview_string"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/current_month_single_item_value_textview"
                    android:layout_weight="1"
                    android:textColor="@drawable/button_text_color_grey" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>