<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/expense_type_detailed_single_item_top_layout"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/expense_type_detailed_single_item_date_layout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/expense_type_detailed_single_item_date_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginTop="20sp"
                android:text="@string/expense_type_detailed_single_item_date_textview_string"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/deeperGrey"
                android:textSize="16sp"
                android:textStyle="normal|bold" />

            <ImageView
                android:layout_width="29dp"
                android:layout_height="22dp"
                app:srcCompat="@drawable/arrow_right"
                android:id="@+id/imageView4"
                android:layout_gravity="bottom" />

            <TextView
                android:id="@+id/expense_type_detailed_single_item_date_overall_value_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="right|end"
                android:text="@string/expense_type_detailed_single_item_date_overall_value_textview_string"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/deeperGrey"
                android:textSize="18sp"
                android:textStyle="normal|bold" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="@color/deeperGrey"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="1dp"
        android:clickable="false"
        android:focusable="false"
        android:background="@drawable/fragment_last_entered_values_single_item_border">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:id="@+id/fragment_statistic_main_screen_layout_with_text">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <TextView
                        android:id="@+id/expense_type_detailed_single_item_expenses_value_textview"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5sp"
                        android:layout_marginLeft="5sp"
                        android:layout_marginRight="5sp"
                        android:layout_marginStart="5sp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/expense_type_detailed_single_item_expenses_value_textview_string"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:textSize="24sp"
                        android:textStyle="normal|bold" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightGrey"
                    android:id="@+id/expense_type_detailed_single_item_horizontal_note_separator"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <TextView
                        android:id="@+id/expense_type_detailed_single_item_expenses_note_textview"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="5sp"
                        android:layout_marginRight="5sp"
                        android:layout_weight="1"
                        android:gravity="right|end"
                        android:text="@string/expense_type_detailed_single_item_expenses_note_textview_string"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>